Fixed overflow bug

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -119,6 +119,10 @@
   margin: 0 auto;
 }
 
+html{
+  overflow-x: hidden;
+}
+
 * {
   margin: 0;
   padding: 0;
